[gd_scene load_steps=14 format=3 uid="uid://ddtkpa3ifuhnj"]

[ext_resource type="Script" path="res://Scenes/ui/FightPlayerUI.gd" id="1_cpms0"]
[ext_resource type="Texture2D" uid="uid://cosogl3d7bq7w" path="res://Sprites/ui/player_health_bar.png" id="1_n0tng"]
[ext_resource type="LabelSettings" uid="uid://ccugtg3ly1noj" path="res://Misc/CardLabelSettings.tres" id="2_2gp3d"]
[ext_resource type="Texture2D" uid="uid://cu85vs3bqcpl1" path="res://Sprites/ui/ap_bar.png" id="3_2pcyn"]
[ext_resource type="Shader" path="res://Shaders/circularbarshader.gdshader" id="5_bravp"]
[ext_resource type="Texture2D" uid="uid://bi387adpaice3" path="res://Sprites/ui/end_action.png" id="6_apsm4"]
[ext_resource type="Texture2D" uid="uid://dyqwdmwipxqar" path="res://Sprites/ui/deck.png" id="7_gocp1"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="8_7lnja"]
[ext_resource type="Texture2D" uid="uid://e2pvd6ycuw" path="res://Sprites/ui/rewardIcons/gold.png" id="8_kx4i3"]
[ext_resource type="Texture2D" uid="uid://bn81552rvli0r" path="res://Sprites/ui/rewardIcons/key.png" id="10_252vg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rqvuj"]
shader = ExtResource("5_bravp")
shader_parameter/cutoff = 1.0
shader_parameter/color = Color(0.792157, 0.34902, 0.329412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oyqhu"]
shader = ExtResource("5_bravp")
shader_parameter/cutoff = 1.0
shader_parameter/color = Color(0.462745, 0.623529, 0.65098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f61hr"]
font = ExtResource("8_7lnja")
font_size = 32
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="FightPlayerUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cpms0")

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(224, 236)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_n0tng")

[node name="HealthBarRect" type="ColorRect" parent="HealthBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -13.0
offset_right = -131.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.662745, 0.286275, 0.286275, 1)

[node name="HealthLabel" type="Label" parent="HealthBar"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.969
offset_left = -125.0
offset_top = -13.0
offset_right = -125.0
offset_bottom = -12.194
text = "10/10
"
label_settings = ExtResource("2_2gp3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ApBar" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rqvuj")
layout_mode = 0
offset_left = 35.0
offset_top = 44.0
offset_right = 154.0
offset_bottom = 163.0

[node name="ApBarOutline" type="Sprite2D" parent="ApBar"]
position = Vector2(59, 59)
scale = Vector2(2, 2)
texture = ExtResource("3_2pcyn")

[node name="ApLabel" type="Label" parent="ApBar/ApBarOutline"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.969
offset_left = -28.0
offset_top = -28.0
offset_right = -34.0
offset_bottom = -32.008
text = "10/10
"
label_settings = ExtResource("2_2gp3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RpBar" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_oyqhu")
layout_mode = 0
offset_left = 296.0
offset_top = 51.0
offset_right = 415.0
offset_bottom = 170.0

[node name="RpBarOutline" type="Sprite2D" parent="RpBar"]
position = Vector2(60, 59)
scale = Vector2(2, 2)
texture = ExtResource("3_2pcyn")

[node name="RpLabel" type="Label" parent="RpBar/RpBarOutline"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.969
offset_left = -28.0
offset_top = -28.0
offset_right = -34.0
offset_bottom = -32.008
text = "10/10
"
label_settings = ExtResource("2_2gp3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container" type="Control" parent="."]
anchors_preset = 0
offset_left = 1606.0
offset_top = 204.0
offset_right = 1860.0
offset_bottom = 266.0

[node name="EndTurnButton" type="Sprite2D" parent="Container"]
position = Vector2(126, 32)
scale = Vector2(2, 2)
texture = ExtResource("6_apsm4")

[node name="EndTurnlabel" type="Label" parent="Container/EndTurnButton"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.969
offset_left = -62.0
offset_top = -14.0
offset_right = -66.0
offset_bottom = -17.008
text = "End Action"
label_settings = ExtResource("2_2gp3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusEffectsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 337.0
offset_right = 415.0
offset_bottom = 428.0
mouse_filter = 2

[node name="Deck" type="Sprite2D" parent="."]
position = Vector2(1776, 849)
scale = Vector2(2.5, 2.5)
texture = ExtResource("7_gocp1")

[node name="DeckCountLabel" type="Label" parent="Deck"]
offset_left = -29.2
offset_top = -89.2
offset_right = 29.8
offset_bottom = -66.2
text = "32/32"
label_settings = ExtResource("2_2gp3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 281.0
offset_right = 134.0
offset_bottom = 337.0
text = ":10"
label_settings = SubResource("LabelSettings_f61hr")
vertical_alignment = 1

[node name="GoldIcon" type="Sprite2D" parent="GoldLabel"]
position = Vector2(-24, 24)
scale = Vector2(0.47, 0.47)
texture = ExtResource("8_kx4i3")

[node name="KeyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 281.0
offset_right = 246.0
offset_bottom = 337.0
text = ":10"
label_settings = SubResource("LabelSettings_f61hr")
vertical_alignment = 1

[node name="KeyIcon" type="Sprite2D" parent="KeyLabel"]
position = Vector2(-24, 24)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_252vg")

[node name="RelicsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 46.0
offset_right = 1064.0
offset_bottom = 137.0
mouse_filter = 2

[connection signal="gui_input" from="Container" to="." method="_on_button_input"]
